Replace resume. Fix footer alignment for mobile. Add link visited url text color for jobs.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
 }
 
 .contactIcon {
-  width: 35px;
+  width: 25px;
   margin-right: 15px;
 }
 
@@ -20,8 +20,13 @@
   list-style-type: none;
 }
 
+.job:visited {
+  color: #7fcd91;
+}
+
 .listItem {
   text-decoration: none;
+  color: white;
 }
 
 .titleContainer {
@@ -100,4 +105,26 @@ ion-tabs {
   // --background: none !important;
   // background-color: red !important;
 
+}
+
+
+.footer {
+  bottom: 0;
+  position: absolute;
+  margin-left: 6%;
+  margin-right: auto;
+  width: 100%;
+  margin-top: 16%;
+}
+
+@media screen and (min-width: 800px) {
+  
+.footer {
+  bottom: 0;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  margin-top: 16%;
+}
 }
