--- a/src/assets/afrotonder.scss
+++ b/src/assets/afrotonder.scss
@@ -352,14 +352,6 @@ ul {
   font-size: 8px;
 }
 
-.footer {
-  bottom: 0;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  margin-top: 16%;
-}
 /* // --------------- KEYFRAMES --------------- */
 @keyframes shake {
   0% {
